tests/ui/rfcs/rfc-2632-const-trait-impl/const-trait-bounds.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/const-trait-bounds.rs:4:39
   |
LL | #![feature(const_trait_impl, effects, generic_const_exprs)]
   |                                       ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error[E0284]: type annotations needed: cannot normalize `process<T>::{constant#0}`
  --> $DIR/const-trait-bounds.rs:12:35
   |
LL | fn process<T: const Trait>(input: [(); T::make(2)]) -> [(); T::make(2)] {
   |                                   ^^^^^^^^^^^^^^^^ cannot normalize `process<T>::{constant#0}`

error[E0284]: type annotations needed: cannot normalize `Struct<T, P>::field::{constant#0}`
  --> $DIR/const-trait-bounds.rs:20:12
   |
LL |     field: [u32; T::make(P)],
   |            ^^^^^^^^^^^^^^^^^ cannot normalize `Struct<T, P>::field::{constant#0}`

error[E0284]: type annotations needed: cannot normalize `process<T>::{constant#1}`
  --> $DIR/const-trait-bounds.rs:13:5
   |
LL |     input
   |     ^^^^^ cannot normalize `process<T>::{constant#1}`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0284`.
